--- a/.docker/config/apache/neo_vhost.conf
+++ b/.docker/config/apache/neo_vhost.conf
@@ -9,8 +9,8 @@
 	#ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /home/ubuntu/dev/symfony/neo/public
-        <Directory /home/ubuntu/dev/symfony/neo/public>
+	DocumentRoot /var/www/html/public
+        <Directory /var/www/html/public>
             Require all granted
 
             <IfModule mod_rewrite.c>
